--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,15 @@
-.container-nopadding
+/* .container-nopadding
 {
     padding-left:0px !important;
     padding-right:0px !important;
 }
-   
+    */
+    .container{
+        margin: 0;
+        padding : 0;
+        border: none;
+        max-width: 100%;
+    }
+    .container_header{
+        width:100%;
+    }
