--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-md-12 container-nopadding">
       <app-header></app-header>
@@ -9,4 +9,18 @@
        <app-policy></app-policy>
     </div>
   </div>
-</div>
+</div> -->
+
+
+<div class="container">
+  <div class="row">
+    <div class="container_header">
+      <app-header></app-header>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 container-nopadding">
+        <app-home></app-home>
+    </div>
+  </div>
+</div> 
