--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,15 +1,9 @@
 .bg-dark
 {
-    background-color:#1A9BDC !important;
-    color: white;
+    background-color:#0081FF !important;
+    color: white !important;
 }
 
-.navbar-dark .navbar-toggler
-{
-    border-color:#1A9BDC !important
-}
-
-.nav-brand-margin
-{
-    margin-left: -40%;
+a {
+    color: white !important;
 }
