--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="pos-f-t">
+<!--<div class="pos-f-t">
   <nav class="navbar navbar-dark text-center bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -10,7 +10,33 @@
     <a class="navbar-brand" *ngIf="step==4||step==6||step==7" href="#">Incident Details</a>
     <a class="navbar-brand" *ngIf="step==5" href="#">3rd Party Details</a>
     <a class="navbar-brand" *ngIf="step==8" href="#">Registration</a>
-    <i class="fa fa-search"></i>
+    <i class="fa fa-search"></i>  
      
   </nav>
-</div>
+</div> -->
+
+<nav class="navbar navbar-expand-lg bg-dark">
+    <img src="../../assets/Capgemini_Logo_White_Mono_RGB.png" alt="logo" width="200px" height="60px">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse " id="navbarText">
+      <ul class="navbar-nav  mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Insurance</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Claims</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+      </ul>
+      <span class="navbar-text">
+          login &nbsp;
+      </span>
+      <i class="material-icons">
+          search
+      </i>
+    </div>
+  </nav>
