--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -107,8 +107,8 @@
           <form class="form-inline">
             <div class="form-group">
               <div class="input-group">
-                <input class="form-control" placeholder="yyyy-mm-dd" name="dp" [(ngModel)]="modelDOB" ngbDatepicker
-                  #d="ngbDatepicker" (dateSelect)="checkdate()">
+                <input class="form-control" placeholder="yyyy-mm-dd" name="dp" [(ngModel)]="modelDOB" (ngModelChange)="checkUserDetails()" ngbDatepicker
+                  #d="ngbDatepicker">
                 <div class="input-group-append">
                   <button class="btn btn-outline-secondary calendar pd_bt_0" (click)="d.toggle();" type="button">
                       <i class="material-icons">
@@ -297,7 +297,7 @@
                   <input class="form-control" placeholder="yyyy-mm-dd" name="dp" [(ngModel)]="model" ngbDatepicker
                     #d="ngbDatepicker">
                   <div class="input-group-append">
-                    <button class="btn btn-outline-secondary calendar pd_bt_0" (click)="d.toggle()" type="button">
+                    <button class="btn btn-outline-secondary calendar pd_bt_0" (click)="d.toggle()" (ngModelChange)="checkAccDetails()" type="button">
                         <i class="material-icons">
                             calendar_today
                         </i>             
