--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -194,6 +194,13 @@
     height:24px;
 }
 
+.help_text {
+    padding-left: 15px;
+    padding-top: 50px;
+    font-size: 15px;
+    font-style: italic;
+}
+
 .pd_bt_0{
     padding-bottom: 0px !important;
 }
